# certbot-dns-oci

./: .gitignore  LICENSE  Makefile  README.md  build-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: release.yml  tests.yml
certbot_dns_oci/_internal/: dns_oci.py
tests/: dns_oci_test.py  fake.pem  test_dns_oci.py  test_oci_config.ini
