[metadata]
name = certbot-dns-oci
description_file = README.md
description_content_type = text/markdown
author = itd27m01
author_email = igortiunov@gmail.com
summary = Oracle Cloud infrastructure DNS Authenticator plugin for Certbot
home_page = https://github.com/ITD27M01/certbot-dns-oci
license = MIT
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Environment :: Plugins
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[files]
packages =
    certbot_dns_oci

[entry_points]
certbot.plugins =
    dns-oci = certbot_dns_oci._internal.dns_oci:Authenticator

[bdist_wheel]
universal = True

[bdist_rpm]
doc_files = README.md

[pbr]
skip_changelog = True
skip_authors = True
